fix: fix image and text space collapsing

--- a/css/style.css
+++ b/css/style.css
@@ -151,8 +151,9 @@ body {
 }
 
 .user__img {
-  height: 4rem;
+  height: 3.5rem;
   border-radius: 50%;
+  margin-right: 1rem;
 }
 .user__name {
   font-size: 1.3rem;
