--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -101,8 +101,9 @@
 
 .user {
   &__img {
-    height: 4rem;
+    height: 3.5rem;
     border-radius: 50%;
+    margin-right: 1rem;
   }
 
   &__name {
